--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
     "react": "18.0.0",
