--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "knex": "^2.3.0",
+    "moment": "^2.29.4",
     "pg": "^8.8.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
