--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
